# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

27-Jun-2009 Gergo Erdosi
 ^ Updated SimplePie to version 1.1.3.
 - Removed sections search plugin.
 ^ Replaced emailcloak content plugin with its refactored version.
 ^ Replaced pagebreak content plugin with its refactored version.
 ^ Replaced pagenavigation content plugin with its refactored version.

26-Jun-2009 Gergo Erdosi
 ^ Replaced com_login with its refactored version.
 ! Thanks to Christophe Demko for helping refactor the com_login component.
 ^ Updated SVN properties on com_login.

25-Jun-2009 Gergo Erdosi
 ^ Merged 'com_newsfeeds' branch (Newsfeeds component refactoring).
 ! Thanks to Rob Clayburn for refactoring the com_newsfeeds component.

23-Jun-2009 Gergo Erdosi
 # Fixed weblink checkin method.
 # Fixed extension parameter of categories. 

23-Jun-2009 Andrew Eddie
 ^ Changed mod_custom into real module; added allowance to run content through content plugin system.
 # Fixed bug preventing mod_custom from displaying content.
 # Fixed bug in JTable::move causing SQL error (ordering field not quoted properly).
 # Fixed SQL bug in frontend com_content categories view.
 + Added sample menu item to test frontend categories view.
 
========== VERSION 1.6 APLHA RELEASED ==========

22-Jun-2009 Gergo Erdosi
 - Removed a duplicate checked out icon from com_content.
 # Fixed form validation on cancel in com_content.

22-Jun-2009 Andrew Eddie
 ^ Configured helpers to support the com_categories submenu.
 + Added JForm fields and parameters to list component and module layout overrides.
 - Drop ordering field from jos_categoies.

21-Jun-2009 Gergo Erdosi
 # Fixed configuration variable error.
 # Fixed typo in installation SQL file.
 ^ Merged 'installation' branch (fixes to installer).
 - Removed installation/LICENSE.
 - Removed unnecessary manifest files.
 - Removed unnecessary language files.
 # Fixed mod_stats query.

21-Jun-2009 Ercan Ozkaya